# ai-os

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  STRUCTURE.md  config.yaml.template  integration_enhanced.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: build.yml  ci.yml
agent/: __init__.py  agent.py  async_agent.py  config.py  conversation_store.py  llm.py  logging_config.py  plugins.py  rpc.py  session.py  system_api.py
agent/api/: websocket_streaming.py
agent/cli/: __init__.py  secrets.py
agent/distributed/: __init__.py  mesh.py
agent/federated/: __init__.py  federated_learning.py
agent/input/: __init__.py  gesture_input.py  text_input.py  voice_input.py
agent/memory/: vector_store.py
agent/optimization/: __init__.py  llm_inference.py
agent/orchestration/: multi_agent.py
agent/plugins/: __init__.py  manifest.py  runner.py  sample_echo.py  sample_echo_runner.py
agent/tools/: __init__.py  builtin.py  executor.py  registry.py
android/: README.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
assets/: colors.yaml
assets/wallpapers/: generate_wallpaper.py
config/: agent.yaml
core/: Makefile
core/apps/: framework.py
core/cli/: aios  cli.c
core/daemon/: aios-agent.py
core/hal/: aios-hal.py  hal.c  hal.h
docs/: ARCHITECTURE.md  DEVELOPER.md  README.md
ports/: README.md
rootfs/: init
tests/: test_agent.py  test_keyring_secrets.py  test_plugin_runner_limits.py  test_rpc.py
tools/: setup_voice.sh
ui/: shell.py
userland/: echo.sh
(+99 files in other folders)
