[tool.poetry]
name = "ai-os"
version = "0.1.0"
description = "AI-native OS prototype agent and tools"
authors = ["ai-os team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
PyYAML = "^6.0"
rich = "^13.0"

[tool.poetry.dev-dependencies]
ruff = "^0.14.0"
mypy = "^1.8.0"
pytest = "^7.0"

[tool.ruff]
extend-select = ["I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
